# rPlayer

./: .LIBRARIES.md.swp  .gitignore  CLAUDE.md  Cargo.toml  LIBRARIES.md  MANUAL.md  README.md  TESTPLAN.md  TRYANDERROR.md  VERSIONING.md
.github/workflows/: ci.yml
scripts/: build.sh  bundle.sh  clean.sh  cross-build.sh  install.sh  package.sh  test.sh  version.sh
src/: app.rs  config.rs  error.rs  main.rs
src/ai/: mod.rs
src/audio/: dsp.rs  mod.rs  output.rs  stretch.rs
src/camera/: mod.rs
src/db/: clothing.rs  mod.rs
src/decode/: audio_decoder.rs  demuxer.rs  mod.rs  video_decoder.rs
src/media/: clock.rs  mod.rs  pipeline.rs  sync.rs
src/subtitle/: mod.rs  parser_smi.rs  parser_srt.rs
src/ui/: mod.rs
src/video/: renderer.rs  shader.wgsl
